<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="app_name" translatable="false">Fishpay</string>
    <string name="your_phone_number">Ваш номер телефона</string>
    <string name="not_found_phone_number">К сожалению, в программе нет пользователя зарегистрированного по номеру телефона</string>
    <string name="next">Далее</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="no_internet">Нет соединения с интернетом</string>
    <string name="short_number">Номер слишком короткий</string>
    <string name="incorrect_number">Номер некорректен</string>
    <string name="long_number">Номер слишком длинный</string>
    <string name="sms_password">СМС-пароль</string>
    <string name="version" translatable="false">version</string>
    <string name="version_" translatable="false">Version</string>
    <string name="version_api" translatable="false">Version API</string>
    <string name="site" translatable="false">www.fishpay.net</string>
    <string name="contact_support" translatable="false">Contact support: support@fishpay.net</string>
    <string name="privacy_licence" translatable="false">© 2016-2017 fishpay privacy policy</string>
    <string name="privacy_licence_switch">Я согласен с договором публичной оферты</string>
    <string name="privacy_licence_error">Прочтите договор публичной оферты</string>
    <string name="offer">Оферта</string>
    <string name="enter_otp_code">Введите код из смс</string>
    <string name="plus" translatable="false">+</string>
    <string name="enter_password">Введите пароль</string>
    <string name="your_contributions">Ваши взносы</string>
    <string name="enter_participant_name">Введите имя участника</string>
    <string name="enter_name_or">Введите имя или название</string>
    <string name="you_complained">Вы пожаловались</string>
    <string name="participant_name">Имя участника</string>
    <string name="phone_number">Номер телефона</string>
    <string name="short_password">Пароль должен состоять не менее чем из 8 символов</string>
    <string name="show_password">Показать пароль</string>
    <string name="save">Сохранить</string>
    <string name="list">Список</string>
    <string name="alert_delete_card">Вы действительно хотите удалить карту из списка?</string>
    <string name="select_goods">Выберите товары</string>
    <string name="participants">Участники</string>
    <string name="user_no_have_operations_yet">У пользователя ещё нет совершёных операций</string>
    <string name="enter_name_group_and_amount">Введите название группы и сумму!</string>
    <string name="enter_name_group">"Введите название группы!"</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_number">ВВЕДИТЕ НОМЕР</string>
    <string name="enter_number_contact">Введите номер телефона</string>
    <string name="enter_birthday">Введите дату рождения</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="wrong_surname">Фамилия должна быть длиной от 2 до 20 символов</string>
    <string name="hide_password">Спрятать пароль</string>
    <string name="create_password">Создайте пароль для входа в систему</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="password8">Пароль должен состоять не менее чем из 8 символов</string>
    <string name="your_name">Ваше имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="email">Электронная почта</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="no_come_password">Не приходит пароль?</string>
    <string name="otp" translatable="false">OTP:</string>
    <string name="registration_sms_alert">Код для регистрации отправлен в виде СМС-сообщения на номер</string>
    <string name="restore_pass_sms_alert">Код для восстановления пароля отправлен в виде СМС-сообщения на номер</string>
    <string name="create_new_password">Создайте новый пароль для входа в аккаунт</string>
    <string name="start_work">Начать работу</string>
    <string name="re_send">Отправить повторно</string>
    <string name="error">Произошла ошибка</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="contacts_search">поиск по имени</string>
    <string name="charity_search">поиск по контакту или названию</string>
    <string name="my_contacts">Мои контакты</string>
    <string name="my">Мои</string>
    <string name="inbox">Входящие</string>
    <string name="sent">Исходящие</string>
    <string name="hi_user">Здравствуйте, %s %s.</string>
    <string name="welcome_user">Добро пожаловать в FishPay</string>
    <string name="incorrect_email">Некорректная електронная почта</string>
    <string name="password_sms_entered_incorrect">Пароль из SMS введен неправильно</string>
    <string name="confirm">Подтвердить</string>
    <string name="contribution_of_joint_purchase">Взнос в рамках общей покупки %s</string>
    <string name="contribution_of_common_spend">Запрос на перевод средств в рамках совмесных расходов</string>
    <string name="contribution">Взнос</string>
    <string name="payment_request">запрос на оплату</string>
    <string name="pay_till">оплатить до:</string>
    <string name="global">Глобальный</string>
    <string name="contacts">Контакты</string>
    <string name="deleted">Удалено</string>
    <string name="search_by_name">Поиск по названию</string>
    <string name="pay_request">Запрос на оплату</string>
    <string name="joint_purchase">Общая покупка</string>
    <string name="my_purchases">Мои товары</string>
    <string name="profile_view">ПРОСМОТР ПРОФАЙЛА</string>
    <string name="in_contacts">В списке контактов</string>
    <string name="charity">Взаимопомощь</string>
    <string name="activity">Активность</string>
    <string name="amount_of">На сумму</string>
    <string name="contribution_form">Форма взноса</string>
    <string name="make_contribution">ВНЕСТИ ВЗНОС</string>
    <string name="joint_costs">Совместные расходы</string>
    <string name="to_pay">Оплатить</string>
    <string name="about_us">О нас</string>
    <string name="to_transfer">Перевести</string>
    <string name="receive">Получить</string>
    <string name="public_card">Публичная карта</string>
    <string name="add_card">Добавить карту</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="permissinons_contacts">Разрешая приложению доступ к контактной книге я принимаю
        <a href="http://www.google.com">правила приложения</a> и
        <a href="http://www.google.com">политику безопасности</a> </string>
    <string name="enter_price">Введите цену</string>
    <string name="card_name">Название карты:</string>
    <string name="private_item">Приватный</string>
    <string name="public_item">Публичный</string>
    <string name="created_by_me">Созданные мною</string>
    <string name="goods_is_edit">Товар изменен</string>
    <string name="input_card_name">Введите название карты</string>
    <string name="input_name">Введите название</string>
    <string name="required_amount">Необходимая сумма</string>
    <string name="back_to_work">Вернутся к роботе</string>
    <string name="card_number">Номер карты:</string>
    <string name="input_card_number">Введите номер карты</string>
    <string name="use_without_card">Использовать без карты</string>
    <string name="minimum_4_char">Минимум 4 знака</string>
    <string name="incomplete_card_number">Неполный номер карты</string>
    <string name="delete">Удалить</string>
    <string name="apply">Подать заявку</string>
    <string name="select_1_reason">Выберите минимум 1 причину или напишите комментарий</string>
    <string name="delete_account_">Удалить аккаунт</string>
    <string name="null_string" translatable="false" />
    <string name="group_name">Название группы</string>
    <string name="input_group_name">Введите название группы</string>
    <string name="amount">Сумма</string>
    <string name="recipient_number">Номер получателя </string>
    <string name="cvv_code">CVV Код</string>
    <string name="select_contact">выберите контакт</string>
    <string name="enter_cvv_code">Введите CVV</string>
    <string name="input_amount">Введите сумму</string>
    <string name="unlimited_amount">Неограниченная сумма</string>
    <string name="already_collected">Уже собрано</string>
    <string name="list_of_contributions">Список взносов</string>
    <string name="total_contribution">Всего взносов</string>
    <string name="preview">ПРЕДПРОСМОТР</string>
    <string name="publish">Опубликовать</string>
    <string name="settings">Настройки</string>
    <string name="add_comment">Добавить коментарий</string>
    <string name="uah">грн</string>
    <string name="uah2"> |грн</string>
    <string name="select">Выбрать</string>
    <string name="select_min_2">Выберете минимум двоих участников</string>
    <string name="fields_must_filled">Для создания транзакции поля \"От участника\" и \"К участнику\" должны быть заполнены</string>
    <string name="fields_must_filled_not_equals">Вы не можете выбрать одного пользователя для двух разных полей</string>
    <string name="attention">Внимание</string>
    <string name="add_participant">ДОБАВИТЬ УЧАСТНИКА</string>
    <string name="select_participants">Выберите участников</string>
    <string name="purchase_description">Описание покупки</string>
    <string name="pay_to">Оплатить до</string>
    <string name="recipient">Получатель</string>
    <string name="payment_transfer_card">Карта для перевода платежа:</string>
    <string name="pay_card">Карта для отправки платежа</string>
    <string name="message_for_members">Сообщение для учасников</string>
    <string name="from_members">От участника</string>
    <string name="to_members">К участнику</string>
    <string name="create_transaction">Создать транзакцию</string>
    <string name="input_date">Введите дату</string>
    <string name="card_for_reception">Карта для приема</string>
    <string name="choose_card">Выберите карту</string>
    <string name="create">Создать</string>
    <string name="title">Заголовок</string>
    <string name="enter_expiration_card">Введите срок действия карты</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="no_expiration_date_selected">Не выбран срок действия</string>
    <string name="available_to">Доступна до:</string>
    <string name="your_password">Ваш пароль</string>
    <string name="creating_joint_purchase">Создание общей покупки</string>
    <string name="choose_minimum_two">Выберите минимум двоих участников для создания общей покупки</string>
    <string name="go">Дальше</string>
    <string name="delete_account">Удаление аккаунта</string>
    <string name="delete_account_confirm">Подтверждение удаления аккаунта придет в виде SMS сообщения на номер</string>
    <string name="to_accept">Принять</string>
    <string name="finish">Завершить</string>
    <string name="you_have_no_common_purchases">У Вас еще нет общих покупок</string>
    <string name="close_purchase">Закрыть покупку</string>
    <string name="you_have_no_incoming_requests">У Вас еще нет входящих запросов</string>
    <string name="you_have_no_outcoming_requests">У Вас еще нет исходящих запросов</string>
    <string name="comment">Коментарий</string>
    <string name="group_is_closed">Группа закрыта</string>
    <string name="start_sum">Стартовая сумма</string>
    <string name="about_spends">Описание расходов</string>
    <string name="group_spends_add_success">Ваш расход успешно добавлен в группу «%s». Вы всегда можете его посмотреть в списке расходов</string>
    <string name="total_amount">Общая сумма</string>
    <string name="done">Готово!</string>
</resources>