<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.myhailov.mykola.fishpay.activities.joint_purchases.AddJoinPurchaseActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/ivBack"
            android:padding="16dp"
            android:src="@drawable/arrow_back"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize" />

        <RelativeLayout
            android:layout_toEndOf="@id/ivBack"
            android:layout_marginEnd="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="18sp"
                android:id="@+id/tvToolBarTitle"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:background="@android:color/transparent"
                tools:text="@string/app_name"/>
        </RelativeLayout>
        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="00.5dp"
            android:background="@color/grey2"/>
    </RelativeLayout>




    <TextView
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"/>
    <EditText
        android:id="@+id/et_group_name"
        android:maxLines="1"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="22dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textSize="22sp"
        android:textColorHint="@color/grey2"
        android:textColor="@color/black1"
        android:hint="@string/input_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"/>
    <View
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey2"/>


    <TextView
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_sum"/>

    <LinearLayout
        android:layout_marginStart="12dp"
        android:layout_marginEnd="22dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.myhailov.mykola.fishpay.views.MoneyEditText
            android:id="@+id/met_amount"
            android:maxLength="13"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textSize="22sp"
            android:textColorHint="@color/grey2"
            android:textColor="@color/black1"
            android:hint="@string/input_amount"
            android:gravity="end"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:text="@string/uah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"/>

    </LinearLayout>
    <View
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey2"/>


    <TextView
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_spends"/>
    <EditText
        android:id="@+id/et_description"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="22dp"
        android:maxLines="4"
        android:imeOptions="actionNext"
        android:textSize="22sp"
        android:textColorHint="@color/grey2"
        android:textColor="@color/black1"
        android:hint="@string/message_for_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"/>
    <View
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey2"/>


    <TextView
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/tv_create"
        android:layout_marginEnd="22dp"
        android:layout_gravity="end"
        android:padding="4dp"
        android:textColor="@color/blue1"
        android:text="@string/create"
        android:layout_marginTop="12dp"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
