<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.myhailov.mykola.fishpay.activities.group_spends.GroupSpendsAddActivity">

    <TextView
            android:textSize="36sp"
            android:textColor="@color/black"
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView65"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tv_description"/>

    <TextView
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:textSize="24sp"
            android:text="@string/group_spends_add_success"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView65"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tv_back"/>

    <TextView
            android:textSize="36sp"
            android:textColor="@color/blue1"
            android:text="@string/back_to_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:layout_constraintHorizontal_bias="0.5"/>
</android.support.constraint.ConstraintLayout>
